[gd_scene load_steps=9 format=2]

[ext_resource path="res://script/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Asset/level1map.png" type="Texture" id=2]
[ext_resource path="res://Asset/audio/Crystal magic from the Ice Palace.mp3" type="AudioStream" id=3]
[ext_resource path="res://Asset/audio/sound_effect/click.wav" type="AudioStream" id=4]

[sub_resource type="Curve" id=2]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=3]
curve = SubResource( 2 )

[sub_resource type="ParticlesMaterial" id=4]
emission_shape = 2
emission_box_extents = Vector3( 300, 300, 1 )
flag_disable_z = true
direction = Vector3( 1, -1, 0 )
spread = 17.85
flatness = 1.0
gravity = Vector3( 0, -2, 0 )
initial_velocity = 5.0
angular_velocity = 6.76
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 7.33
scale_curve = SubResource( 3 )

[sub_resource type="Environment" id=1]
glow_enabled = true
glow_levels/2 = true
glow_intensity = 1.21
glow_strength = 1.03

[node name="MainMenu" type="Control"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.682353, 0.792157, 1, 1 )
position = Vector2( 568, 961 )
scale = Vector2( 1.0786, 1.05266 )
texture = ExtResource( 2 )

[node name="Particles2D" type="Particles2D" parent="."]
modulate = Color( 1.16, 0.58, 5.21, 0.8 )
position = Vector2( 510, 1115 )
amount = 20
process_material = SubResource( 4 )

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -582.0
margin_top = -1005.0
margin_right = 571.0
margin_bottom = 944.0
color = Color( 0, 0, 0, 0.52549 )

[node name="Menu" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 288.0
margin_top = 718.0
margin_right = 385.0
margin_bottom = 835.0
rect_scale = Vector2( 5, 5 )
__meta__ = {
"_editor_description_": ""
}

[node name="Start2" type="Button" parent="Menu"]
modulate = Color( 23.12, 2.9, 7.51, 1 )
margin_right = 97.0
margin_bottom = 20.0
text = "Start"

[node name="Setting" type="Button" parent="Menu"]
modulate = Color( 2.31, 2.32, 38.73, 1 )
margin_top = 24.0
margin_right = 97.0
margin_bottom = 44.0
text = "Setting"

[node name="Exit" type="Button" parent="Menu"]
modulate = Color( 44.51, 2.33, 1, 1 )
margin_top = 48.0
margin_right = 97.0
margin_bottom = 68.0
text = "Exit"

[node name="Thanks" type="Button" parent="Menu"]
modulate = Color( 1.74, 2.91, 9.83, 1 )
margin_top = 72.0
margin_right = 97.0
margin_bottom = 92.0
text = "Thanks"

[node name="AudioVedioOptions" type="Control" parent="."]
visible = false
modulate = Color( 5.2, 7.56, 10.98, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 515.0
margin_top = 783.0
margin_right = 515.0
margin_bottom = 783.0
rect_scale = Vector2( 4, 4 )

[node name="ColorRect" type="ColorRect" parent="AudioVedioOptions"]
margin_left = -122.0
margin_top = -152.0
margin_right = 151.0
margin_bottom = 208.0
color = Color( 0, 0, 0, 0.266667 )

[node name="Video" type="HBoxContainer" parent="AudioVedioOptions"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -29.0
margin_top = -108.0
margin_right = 68.0
margin_bottom = -28.0

[node name="VBoxContainer" type="VBoxContainer" parent="AudioVedioOptions/Video"]
margin_right = 69.0
margin_bottom = 80.0

[node name="FullScreen" type="Label" parent="AudioVedioOptions/Video/VBoxContainer"]
margin_right = 69.0
margin_bottom = 24.0
size_flags_vertical = 7
text = "FullScreen"

[node name="Borderless" type="Label" parent="AudioVedioOptions/Video/VBoxContainer"]
margin_top = 28.0
margin_right = 69.0
margin_bottom = 52.0
size_flags_vertical = 7
text = "Borderless"

[node name="VSync" type="Label" parent="AudioVedioOptions/Video/VBoxContainer"]
margin_top = 56.0
margin_right = 69.0
margin_bottom = 80.0
size_flags_vertical = 7
text = "VSync"

[node name="Check" type="VBoxContainer" parent="AudioVedioOptions/Video"]
margin_left = 73.0
margin_right = 97.0
margin_bottom = 80.0

[node name="FullScreen" type="CheckBox" parent="AudioVedioOptions/Video/Check"]
margin_right = 24.0
margin_bottom = 24.0

[node name="Borderless" type="CheckBox" parent="AudioVedioOptions/Video/Check"]
margin_top = 28.0
margin_right = 24.0
margin_bottom = 52.0

[node name="VSync" type="CheckBox" parent="AudioVedioOptions/Video/Check"]
margin_top = 56.0
margin_right = 24.0
margin_bottom = 80.0

[node name="Audio" type="HBoxContainer" parent="AudioVedioOptions"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = -118.0
margin_top = 30.0
margin_right = 139.0
margin_bottom = 86.0

[node name="Labels" type="VBoxContainer" parent="AudioVedioOptions/Audio"]
margin_right = 58.0
margin_bottom = 56.0

[node name="Master" type="Label" parent="AudioVedioOptions/Audio/Labels"]
margin_right = 58.0
margin_bottom = 16.0
rect_pivot_offset = Vector2( 180, 108 )
size_flags_vertical = 7
text = "Master"

[node name="Music" type="Label" parent="AudioVedioOptions/Audio/Labels"]
margin_top = 20.0
margin_right = 58.0
margin_bottom = 36.0
size_flags_vertical = 7
text = "Music"

[node name="Sound FX" type="Label" parent="AudioVedioOptions/Audio/Labels"]
margin_top = 40.0
margin_right = 58.0
margin_bottom = 56.0
size_flags_vertical = 7
text = "Sound FX"

[node name="Slider" type="VBoxContainer" parent="AudioVedioOptions/Audio"]
margin_left = 62.0
margin_right = 257.0
margin_bottom = 56.0
size_flags_horizontal = 3

[node name="Master" type="HSlider" parent="AudioVedioOptions/Audio/Slider"]
margin_right = 195.0
margin_bottom = 16.0

[node name="Music" type="HSlider" parent="AudioVedioOptions/Audio/Slider"]
margin_top = 20.0
margin_right = 195.0
margin_bottom = 36.0

[node name="Sound FX" type="HSlider" parent="AudioVedioOptions/Audio/Slider"]
margin_top = 40.0
margin_right = 195.0
margin_bottom = 56.0

[node name="VideoSetting" type="Label" parent="AudioVedioOptions"]
modulate = Color( 1, 0.984314, 0.109804, 1 )
margin_left = -25.0
margin_top = -134.0
margin_right = 59.0
margin_bottom = -120.0
text = "Video Setting"

[node name="Audio Setting2" type="Label" parent="AudioVedioOptions"]
modulate = Color( 1, 0.984314, 0.109804, 1 )
margin_left = -41.0
margin_top = 9.0
margin_right = 44.0
margin_bottom = 23.0
text = "Audio Setting"

[node name="BackfromSetting" type="Button" parent="AudioVedioOptions"]
modulate = Color( 0.745098, 0.745098, 2.6, 0.490196 )
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -21.25
margin_top = 129.5
margin_right = 27.75
margin_bottom = 149.5
rect_scale = Vector2( 1.5, 1.5 )
text = "Back"

[node name="ThanksName" type="Control" parent="."]
visible = false
modulate = Color( 0.960784, 1, 0.482353, 1 )
margin_left = 56.0
margin_top = 451.0
margin_right = 384.0
margin_bottom = 633.0
rect_scale = Vector2( 3, 3 )

[node name="ColorRect" type="ColorRect" parent="ThanksName"]
margin_left = -6.0
margin_top = -76.0
margin_right = 328.0
margin_bottom = 402.0
color = Color( 0, 0, 0, 0.266667 )

[node name="Labels" type="VBoxContainer" parent="ThanksName"]
margin_left = 11.6667
margin_top = -17.6667
margin_right = 368.667
margin_bottom = 269.333

[node name="Music" type="Label" parent="ThanksName/Labels"]
margin_right = 357.0
margin_bottom = 133.0
rect_pivot_offset = Vector2( 180, 108 )
size_flags_vertical = 7
text = "Music: 

   1. bg:  I buy from GameDev
   2. sfx: from Freesound and mixkit

Font:
    RPG font from platformer2D 
"

[node name="Learning Material" type="Label" parent="ThanksName/Labels"]
margin_top = 137.0
margin_right = 357.0
margin_bottom = 287.0
size_flags_vertical = 7
text = "Learning Material:

   1. Yellow Hat Games: Create a CountDown
   2. Arkeve: How to Make an Inventory System 


Special thanks:

                         Zero, Louis"

[node name="BackfromThanksl" type="Button" parent="ThanksName"]
modulate = Color( 14.45, 2.33, 1, 1 )
margin_left = 104.667
margin_top = 315.667
margin_right = 158.667
margin_bottom = 335.667
rect_scale = Vector2( 1.5, 1.5 )
text = "Back"

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 1 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
autoplay = true

[node name="click" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[connection signal="pressed" from="Menu/Start2" to="." method="_on_Start2_pressed"]
[connection signal="pressed" from="Menu/Setting" to="." method="_on_Setting_pressed"]
[connection signal="pressed" from="Menu/Exit" to="." method="_on_Exit_pressed"]
[connection signal="pressed" from="Menu/Thanks" to="." method="_on_Thanks_pressed"]
[connection signal="toggled" from="AudioVedioOptions/Video/Check/FullScreen" to="." method="_on_FullScreen_toggled"]
[connection signal="toggled" from="AudioVedioOptions/Video/Check/Borderless" to="." method="_on_Borderless_toggled"]
[connection signal="toggled" from="AudioVedioOptions/Video/Check/VSync" to="." method="_on_VSync_toggled"]
[connection signal="value_changed" from="AudioVedioOptions/Audio/Slider/Master" to="." method="_on_Master_value_changed"]
[connection signal="value_changed" from="AudioVedioOptions/Audio/Slider/Music" to="." method="_on_Music_value_changed"]
[connection signal="value_changed" from="AudioVedioOptions/Audio/Slider/Sound FX" to="." method="_on_Sound_FX_value_changed"]
[connection signal="pressed" from="AudioVedioOptions/BackfromSetting" to="." method="_on_BackfromSetting_pressed"]
[connection signal="pressed" from="ThanksName/BackfromThanksl" to="." method="_on_BackfromThanksl_pressed"]
